test/spec_vectors/return_call_indirect/fail/module_20.wat
(module (type (func (param i32))) (table 0 funcref) (func $type-func-num-vs-i32 (return_call_indirect (type 0) (i32.const 0) (i64.const 1))))